<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.mo</groupId>
    <artifactId>snapshot</artifactId>
    <version>1.0</version>
    <name>SnapSticker</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <javafx.version>21.0.2</javafx.version>
        <main.class>com.github.sticker.ScreenshotStickerApp</main.class>
    </properties>

    <description>
        Copyright (c) 2025 luka. Licensed under MIT.
        A Java library for Snapshot purposes.
    </description>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Luka</name>
            <email>nio.liang.peng@gmail.com</email>
            <url>https://github.com/pengliang56</url>
        </developer>
    </developers>

    <dependencies>
        <!-- JavaFX controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <!-- JavaFX graphics -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <!-- JavaFX base -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <!-- JavaFX swing support -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>com.github.kwhat</groupId>
            <artifactId>jnativehook</artifactId>
            <version>2.2.2</version>
        </dependency>
        <!-- JNA Platform -->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.13.0</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.13.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.ui=com.github.sticker</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.stage=com.github.sticker</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.tk=com.github.sticker</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                    <options>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.glass.ui=com.github.sticker</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.stage=com.github.sticker</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.tk=com.github.sticker</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <includeArtifactIds>javafx-*,jna,jna-platform,jnativehook</includeArtifactIds>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <headerType>gui</headerType>
                    <outfile>${project.build.directory}/${project.name}.exe</outfile>
                    <jar>${project.build.directory}/${project.name}.jar</jar>
                    <icon>src/main/resources/icon.ico</icon>
                    <jre>
                        <minVersion>17</minVersion>
                        <maxVersion>17.0.99</maxVersion>
                        <runtimeBits>64</runtimeBits>
                        <jdkPreference>preferJdk</jdkPreference>
                        <path>${env.JAVA_HOME}</path>
                        <opts>
                            <opt>--module-path</opt>
                            <opt>"${project.build.directory}/lib;${env.JAVA_HOME}/jmods"</opt>
                            <opt>--add-modules</opt>
                            <opt>com.github.sticker</opt>
                            <opt>-Djava.library.path=lib</opt>
                            <opt>-Djavafx.verbose=true</opt>
                        </opts>
                    </jre>
                    <classPath>
                        <mainClass>com.github.sticker/$｛main.class｝</mainClass>
                    </classPath>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
